creating student_item.xml and activity_students_list.xm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Students-App-Androaid</string>
+    <string name="title_activity_students_list">StudentsListActivity</string>
 </resources>
